(include_subdirs qualified)

(coq.theory
 (name CraneTestsBasics)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane)
 (flags (:standard -output-directory ../../tests/basics)))

(alias
 (name runtest)
 (deps
  ;; depend on all .vo files in this directory
  ;; this ensures dune runtest compiles them
  (glob_files *.vo)))
