(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsWIP)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane)
 (flags (:standard -output-directory ../../tests/wip)))


(subdir todo_erased_instance_param
 (rule
  (targets todo_erased_instance_param.t.exe)
  (deps TodoErasedInstanceParam.vo todo_erased_instance_param.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} todo_erased_instance_param.t.exe todo_erased_instance_param.cpp todo_erased_instance_param.t.cpp)))
 (rule
  (alias runtest)
  (deps todo_erased_instance_param.t.exe)
  (action (run ./todo_erased_instance_param.t.exe))))
